--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(LEARN_Assignment1)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(LEARN_Assignment1 main.cpp)
+add_executable(LEARN_Assignment1 main.cpp
+        page_rank.cpp
+        page_rank.h)
